# starlint

./: .codecov.yml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE_ANALYSIS.md  Cargo.toml  LICENSE  PROMPT_build.md  README.md  REDUNDANCY_ANALYSIS.md  clippy.toml  deny.toml  loop.sh  rust-toolchain.toml
crates/starlint_ast/: Cargo.toml
crates/starlint_ast/src/: lib.rs  node.rs  node_type.rs  operator.rs  traverse.rs  tree.rs  types.rs
crates/starlint_benches/: Cargo.toml
crates/starlint_benches/benches/: rules.rs
crates/starlint_benches/src/: lib.rs
crates/starlint_cli/: Cargo.toml
crates/starlint_cli/src/: cli.rs  error.rs  lib.rs  main.rs
crates/starlint_config/: Cargo.toml
crates/starlint_config/src/: error.rs  lib.rs  resolve.rs
crates/starlint_core/: Cargo.toml
crates/starlint_core/src/: ast_converter.rs  cache.rs  diagnostic.rs  directives.rs  engine.rs  error.rs  file_discovery.rs  fix.rs  fix_builder.rs  fix_utils.rs  lib.rs  lint_rule.rs  lint_rule_plugin.rs  overrides.rs  parser.rs  plugin.rs  rule.rs  traversal.rs
crates/starlint_core/src/lint_rules/: eqeqeq.rs  mod.rs  no_debugger.rs  no_empty.rs  no_var.rs
crates/starlint_core/src/rules/: accessor_pairs.rs  approx_constant.rs  array_callback_return.rs  arrow_body_style.rs  bad_array_method_on_arguments.rs  bad_bitwise_operator.rs  bad_char_at_comparison.rs  bad_comparison_sequence.rs  bad_min_max_func.rs  bad_object_literal_comparison.rs  bad_replace_all_arg.rs  better_regex.rs  block_scoped_var.rs  branches_sharing_code.rs  capitalized_comments.rs  catch_error_name.rs  category_guard.rs  class_methods_use_this.rs  consistent_assert.rs  consistent_date_clone.rs  consistent_destructuring.rs  consistent_empty_array_spread.rs  consistent_existence_index_check.rs  consistent_function_scoping.rs  consistent_template_literal_escape.rs  const_comparisons.rs  constructor_super.rs  curly.rs  default_case.rs  default_case_last.rs  default_param_last.rs  double_comparisons.rs  empty_brace_spaces.rs  eqeqeq.rs  erasing_op.rs  error_message.rs  escape_case.rs  expiring_todo_comments.rs  explicit_length_check.rs  filename_case.rs  (+288 more)
crates/starlint_core/src/rules/import/: consistent_type_specifier_style.rs  default.rs  export.rs  exports_last.rs  extensions.rs  first.rs  group_exports.rs  max_dependencies.rs  mod.rs  named.rs  namespace.rs  no_absolute_path.rs  no_amd.rs  no_anonymous_default_export.rs  no_commonjs.rs  no_cycle.rs  no_default_export.rs  no_duplicates.rs  no_dynamic_require.rs  no_empty_named_blocks.rs  no_mutable_exports.rs  no_named_as_default.rs  no_named_as_default_member.rs  no_named_default.rs  no_named_export.rs  no_namespace.rs  no_nodejs_modules.rs  no_relative_parent_imports.rs  (+6 more)
crates/starlint_core/tests/: fix_idempotency_test.rs  integration_test.rs
crates/starlint_loader/: Cargo.toml
crates/starlint_loader/src/: lib.rs
crates/starlint_lsp/: Cargo.toml
crates/starlint_lsp/src/: convert.rs  document.rs  lib.rs  server.rs  snippet.rs
crates/starlint_parser/: Cargo.toml
crates/starlint_parser/proptest-regressions/: proptest_parser.txt
crates/starlint_parser/src/: error.rs  lexer.rs  lib.rs  proptest_parser.rs  token.rs
crates/starlint_parser/src/parser/: expressions.rs  jsx.rs  mod.rs  modules.rs  statements.rs  typescript.rs
crates/starlint_plugin_core/: Cargo.toml
crates/starlint_plugin_core/src/: lib.rs
crates/starlint_plugin_core/src/rules/: accessor_pairs.rs  approx_constant.rs  array_callback_return.rs  arrow_body_style.rs  bad_array_method_on_arguments.rs  bad_bitwise_operator.rs  bad_char_at_comparison.rs  bad_comparison_sequence.rs  bad_min_max_func.rs  bad_object_literal_comparison.rs  bad_replace_all_arg.rs  better_regex.rs  block_scoped_var.rs  branches_sharing_code.rs  capitalized_comments.rs  catch_error_name.rs  class_methods_use_this.rs  consistent_assert.rs  consistent_date_clone.rs  consistent_destructuring.rs  consistent_empty_array_spread.rs  consistent_existence_index_check.rs  consistent_function_scoping.rs  consistent_template_literal_escape.rs  const_comparisons.rs  constructor_super.rs  curly.rs  default_case.rs  default_case_last.rs  default_param_last.rs  double_comparisons.rs  empty_brace_spaces.rs  eqeqeq.rs  erasing_op.rs  error_message.rs  escape_case.rs  expiring_todo_comments.rs  explicit_length_check.rs  filename_case.rs  for_direction.rs  (+287 more)
crates/starlint_plugin_jsdoc/: Cargo.toml
crates/starlint_plugin_jsdoc/src/: lib.rs
crates/starlint_plugin_jsdoc/src/rules/: mod.rs
crates/starlint_plugin_modules/: Cargo.toml
crates/starlint_plugin_modules/src/: lib.rs
crates/starlint_plugin_modules/src/rules/: mod.rs
crates/starlint_plugin_nextjs/: Cargo.toml
crates/starlint_plugin_nextjs/src/: lib.rs
crates/starlint_plugin_nextjs/src/rules/: mod.rs
crates/starlint_plugin_react/: Cargo.toml
crates/starlint_plugin_react/src/: lib.rs
crates/starlint_plugin_react/src/rules/: mod.rs
crates/starlint_plugin_sdk/: Cargo.toml
crates/starlint_plugin_sdk/src/: diagnostic.rs  lib.rs  rule.rs
crates/starlint_plugin_storybook/: Cargo.toml
crates/starlint_plugin_storybook/src/: lib.rs
crates/starlint_plugin_storybook/src/rules/: mod.rs
crates/starlint_plugin_vue/: Cargo.toml
crates/starlint_plugin_vue/src/: lib.rs
crates/starlint_plugin_vue/src/rules/: mod.rs
crates/starlint_rule_framework/: Cargo.toml
crates/starlint_rule_framework/src/: ast_utils.rs  case_utils.rs  diagnostic_builder.rs  fix_builder.rs  fix_utils.rs  jsx_utils.rs  lib.rs  lint_rule.rs  lint_rule_plugin.rs  macros.rs  plugin.rs  source_utils.rs  traversal.rs
crates/starlint_scope/: Cargo.toml
crates/starlint_scope/src/: builder.rs  lib.rs  proptest_scope.rs  scope_data.rs  types.rs
crates/starlint_wasm_host/: Cargo.toml
crates/starlint_wasm_host/benches/: wasm_overhead.rs
crates/starlint_wasm_host/src/: bridge.rs  builtins.rs  collector.rs  error.rs  lib.rs  loader.rs  runtime.rs
crates/starlint_wasm_host/tests/: wasm_plugin_integration.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parse.rs  fuzz_parse_scope.rs
(+838 files in other folders)
