[package]
name = "starlint-benches"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Per-rule benchmarks for starlint lint rules"

[dependencies]
starlint_rule_framework = { workspace = true, features = ["test-utils"] }
starlint_parser = { workspace = true }
starlint_ast = { workspace = true }
starlint_scope = { workspace = true }

starlint-plugin-core = { workspace = true }
starlint-plugin-react = { workspace = true }
starlint-plugin-typescript = { workspace = true }
starlint-plugin-testing = { workspace = true }
starlint-plugin-modules = { workspace = true }
starlint-plugin-nextjs = { workspace = true }
starlint-plugin-vue = { workspace = true }
starlint-plugin-jsdoc = { workspace = true }
starlint-plugin-storybook = { workspace = true }

criterion = { workspace = true }

[[bench]]
name = "rules"
harness = false

[lints]
workspace = true
