[package]
name = "starlint_cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI binary for the starlint JS/TS linter"

[[bin]]
name = "starlint"
path = "src/main.rs"

[dependencies]
starlint_core = { workspace = true }
starlint_config = { workspace = true }
starlint_wasm_host = { workspace = true }

miette = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
