[package]
name = "starlint_cli"
version = "0.1.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "CLI binary for the starlint JS/TS linter"

[[bin]]
name = "starlint"
path = "src/main.rs"

[dependencies]
starlint_core = { workspace = true }
starlint_config = { workspace = true }
starlint_loader = { workspace = true }
starlint_rule_framework = { workspace = true }
starlint_lsp = { workspace = true }
starlint_plugin_sdk = { workspace = true }

tokio = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
