[package]
name = "starlint_config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Configuration file loading and resolution for starlint"

[dependencies]
starlint_plugin_sdk = { workspace = true }

miette = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
globset = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
