[package]
name = "starlint_core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Core linting engine for starlint"

[dependencies]
starlint_ast = { workspace = true }
starlint_plugin_sdk = { workspace = true }
starlint_config = { workspace = true }

miette = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_parser = { workspace = true }
oxc_semantic = { workspace = true }
oxc_span = { workspace = true }

globset = { workspace = true }
ignore = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
insta = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
