[package]
name = "starlint_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Core linting engine for starlint"

[dependencies]
starlint_parser = { workspace = true }
starlint_plugin_sdk = { workspace = true }
starlint_scope = { workspace = true }
starlint_config = { workspace = true }
starlint_rule_framework = { workspace = true }

miette = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

globset = { workspace = true }
ignore = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
insta = { workspace = true }
toml = { workspace = true }

# Plugin crates for integration tests (fix idempotency etc.)
starlint_plugin_core = { workspace = true }
starlint_plugin_react = { workspace = true }
starlint_plugin_typescript = { workspace = true }
starlint_plugin_testing = { workspace = true }
starlint_plugin_modules = { workspace = true }
starlint_plugin_nextjs = { workspace = true }
starlint_plugin_vue = { workspace = true }
starlint_plugin_jsdoc = { workspace = true }
starlint_plugin_storybook = { workspace = true }

[lints]
workspace = true
