[package]
name = "starlint_loader"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Plugin loader for starlint — resolves native and WASM plugins from config"

[features]
default = ["wasm"]
wasm = ["dep:starlint_wasm_host"]

[dependencies]
starlint_core = { workspace = true }
starlint_config = { workspace = true }
starlint_plugin_sdk = { workspace = true }
starlint_wasm_host = { workspace = true, optional = true }
tracing = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
