[package]
name = "starlint_loader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Plugin loader for starlint — resolves native and WASM plugins from config"

[features]
default = ["wasm", "plugin-core", "plugin-react", "plugin-typescript", "plugin-testing", "plugin-modules", "plugin-nextjs", "plugin-vue", "plugin-jsdoc", "plugin-storybook"]
wasm = ["dep:starlint_wasm_host"]
plugin-core = ["dep:starlint_plugin_core"]
plugin-react = ["dep:starlint_plugin_react"]
plugin-typescript = ["dep:starlint_plugin_typescript"]
plugin-testing = ["dep:starlint_plugin_testing"]
plugin-modules = ["dep:starlint_plugin_modules"]
plugin-nextjs = ["dep:starlint_plugin_nextjs"]
plugin-vue = ["dep:starlint_plugin_vue"]
plugin-jsdoc = ["dep:starlint_plugin_jsdoc"]
plugin-storybook = ["dep:starlint_plugin_storybook"]

[dependencies]
starlint_config = { workspace = true }
starlint_plugin_sdk = { workspace = true }
starlint_rule_framework = { workspace = true }
starlint_wasm_host = { workspace = true, optional = true }
tracing = { workspace = true }
serde_json = { workspace = true }

# Plugin crates (all optional, feature-gated)
starlint_plugin_core = { workspace = true, optional = true }
starlint_plugin_react = { workspace = true, optional = true }
starlint_plugin_typescript = { workspace = true, optional = true }
starlint_plugin_testing = { workspace = true, optional = true }
starlint_plugin_modules = { workspace = true, optional = true }
starlint_plugin_nextjs = { workspace = true, optional = true }
starlint_plugin_vue = { workspace = true, optional = true }
starlint_plugin_jsdoc = { workspace = true, optional = true }
starlint_plugin_storybook = { workspace = true, optional = true }

[lints]
workspace = true
