[package]
name = "starlint_lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "LSP server for starlint"

[dependencies]
starlint_core = { workspace = true }
starlint_config = { workspace = true }
starlint_loader = { workspace = true }
starlint_plugin_sdk = { workspace = true }

tower-lsp = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
