[package]
name = "starlint_parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Hand-written JS/TS/JSX parser producing starlint_ast directly"

[dependencies]
starlint_ast = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
