[package]
name = "starlint_plugin_modules"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Import/Node/Promise lint rules for starlint"

[dependencies]
starlint_rule_framework = { workspace = true }
starlint_plugin_sdk = { workspace = true }
starlint_ast = { workspace = true }

serde_json = { workspace = true }

[dev-dependencies]
starlint_rule_framework = { workspace = true, features = ["test-utils"] }

[lints]
workspace = true
