[package]
name = "starlint-plugin-react"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "React/JSX A11y/React Perf lint rules for starlint"

[dependencies]
starlint_rule_framework = { workspace = true }
starlint_plugin_sdk = { workspace = true }
starlint_ast = { workspace = true }


[dev-dependencies]
starlint_rule_framework = { workspace = true, features = ["test-utils"] }

[lints]
workspace = true
