[package]
name = "starlint_plugin_storybook"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Storybook lint rules for starlint"

[dependencies]
starlint_rule_framework = { workspace = true }
starlint_plugin_sdk = { workspace = true }
starlint_ast = { workspace = true }


[dev-dependencies]
starlint_rule_framework = { workspace = true, features = ["test-utils"] }

[lints]
workspace = true
