[package]
name = "starlint_scope"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Lightweight scope analysis for starlint_ast AstTree"

[dependencies]
starlint_ast = { workspace = true }
starlint_plugin_sdk = { workspace = true }

[dev-dependencies]
starlint_parser = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
