[package]
name = "starlint_wasm_host"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WASM plugin host for starlint"

[features]
default = ["wasm"]
wasm = ["dep:wasmtime"]

[dependencies]
starlint_plugin_sdk = { workspace = true }
starlint_core = { workspace = true }

miette = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasmtime = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
